# logic_agent

./: .gitignore  README.md  data  pyproject.toml  requirements-dev.txt
src/logic_agent/: __init__.py  ape.py  evaluation.py  logging.py  main.py
src/logic_agent/dataset/: mvtec_loco.py
src/logic_agent/model/: __init__.py  dinov3.py  grounding_sam.py  hpd.py  hs_crl.py  segment.py
