[project]
name = "logic-agent"
version = "0.1.0"
description = "Scene-level few-shot anomaly detection utilities (SAM + DINOv3 graph pipeline)"
readme = "README.md"
authors = [
    { name = "yijinong", email = "ongyijin8@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets==4.3.0",
    "hdbscan>=0.8.41",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "numpy>=1.24.0",
    "openai>=2.15.0",
    "opencv-python>=4.11.0.86",
    "qwen-vl-utils>=0.0.14",
    "rich>=14.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "termcolor>=3.3.0",
    "transformers>=4.57.3",
    "ultralytics>=8.4.21",
    "unsloth>=2026.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "ipykernel>=7.1.0",
    "mypy>=1.10.0",
    "pytest>=7.2.0",
]

[tool.ruff]
line-length = 120

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

